--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,4 +1,4 @@
 <div [hidden]="service.isLogged()" class="login-form">
-  <label>Username: </label><br/>
+  <label>username: </label><br/>
   <input class="login-input" type="text" [(ngModel)]="username" (keyup.enter)="send()"/>
 </div>
